RESOLVED FIXED266964
[GStreamer] Leak fixes for GL display, registries and video encoder
https://bugs.webkit.org/show_bug.cgi?id=266964
Summary [GStreamer] Leak fixes for GL display, registries and video encoder
Philippe Normand
Reported 2024-01-01 01:36:25 PST
.
Attachments
Philippe Normand
Comment 1 2024-01-01 01:40:13 PST
EWS
Comment 2 2024-01-01 04:28:08 PST
Committed 272551@main (c0c0cb347423): <https://commits.webkit.org/272551@main> Reviewed commits have been landed. Closing PR #22282 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-01-01 04:29:15 PST
Note You need to log in before you can comment on or make changes to this bug.