[GStreamer] Leak fixes for GL display, registries and video encoder https://bugs.webkit.org/show_bug.cgi?id=266964

Reviewed by Carlos Garcia Campos.

The GL display and app contexts were persistent, so never destroyed, thus reported by the leak
tracer. The encoder was also leaking a GstElementFactory so its state is now cleared before
deinitialization. The MSE registry is also now cleaned-up as well.

* Source/WebCore/platform/graphics/PlatformDisplay.h:
* Source/WebCore/platform/graphics/gstreamer/GLVideoSinkGStreamer.cpp:
(requestGLContext):
* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::registerWebKitGStreamerElements):
(WebCore::registerWebKitGStreamerVideoEncoder):
(WebCore::deinitializeGStreamer):
* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::singletonWasInitialized):
(WebCore::teardownGStreamerRegistryScanner):
(WebCore::GStreamerRegistryScanner::singletonNeedsInitialization): Deleted.
* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.h:
* Source/WebCore/platform/graphics/gstreamer/PlatformDisplayGStreamer.cpp:
(WebCore::PlatformDisplay::clearGStreamerGLState):
* Source/WebCore/platform/graphics/gstreamer/mse/GStreamerRegistryScannerMSE.cpp:
(WebCore::GStreamerRegistryScannerMSE::singleton):
(WebCore::teardownGStreamerRegistryScannerMSE):
* Source/WebCore/platform/graphics/gstreamer/mse/GStreamerRegistryScannerMSE.h:
* Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:
(teardownVideoEncoderSingleton):
* Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/272551@main