Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp
@@ -184,6 +184,11 @@ public:
     }
 };
 
+void teardownVideoEncoderSingleton()
+{
+    Encoders::singleton().clear();
+}
+
 /* Internal bin structure: videoconvert ! inputCapsFilter ! encoder ! outputCapsFilter ! (optional
    parser) ! capsFilter */
 struct _WebKitVideoEncoderPrivate {
